@@ -7,7 +7,7 @@ dnl
 dnl   BNV_HAVE_QT Macro Copyright (C) 2001, 2002, 2003, 2005, 2006 
 dnl   Bastiaan Veelo
 dnl
-dnl      $Id: acinclude.m4,v 1.2 2008/01/25 12:27:11 fredg Exp $
+dnl      $Id: acinclude.m4,v 1.7.8.2 2012/08/08 19:48:29 cvs Exp $
 dnl
 dnl   This program is free software; you can redistribute it and/or modify
 dnl   it under the terms of the GNU General Public License version 2 as
@@ -41,7 +41,6 @@ AC_DEFUN([AR_GCC_TARGET],[AC_REQUIRE([AC_PROG_CC])]
   ]
 )
 
-
 dnl AR_GET_DISTRO()
 dnl
 dnl Try to determine the name and version of the distribution running
@@ -49,16 +48,19 @@ dnl on the host machine, based on entries in '/etc/'.
 dnl The following variables are set:
 dnl   $ar_distro_name = Distribution Name (SuSE, Debian, etc)
 dnl   $ar_distro_version = Distribution Version (10.3, 3.1, etc)
+dnl   $ar_distro_major = Distribution Version Major Number (10, 3, etc)
+dnl   $ar_distro_minor = Distribution Version Minor Number (3, 1, etc)
 dnl
 AC_DEFUN([AR_GET_DISTRO],[]
   [
   AC_MSG_CHECKING(distribution)
   ar_distro_name=$(./get_distro.sh NAME $AWK)
   ar_distro_version=$(./get_distro.sh VERSION $AWK)
+  ar_distro_major=$(./get_distro.sh MAJOR $AWK)
+  ar_distro_minor=$(./get_distro.sh MINOR $AWK)
   AC_MSG_RESULT([$ar_distro_name $ar_distro_version])
   ]
 )
-
 
 dnl BNV_HAVE_QT [--with-Qt-dir=DIR] [--with-Qt-lib-dir=DIR] [with-Qt-lib=LIB]
 dnl BNV_HAVE_QT [--with-Qt-include-dir=DIR] [--with-Qt-bin-dir=DIR] 
@@ -153,7 +155,7 @@ AC_DEFUN([BNV_HAVE_QT],
         bnv_qt_lib="`ls $bnv_qt_lib_dir/libqt* | sed -n 1p |
                      sed s@$bnv_qt_lib_dir/lib@@ | [sed s@[.].*@@]`"
       fi
-      bnv_qt_LIBS="-L$bnv_qt_lib_dir -l$bnv_qt_lib $X_PRE_LIBS $X_LIBS -lX11 -lXext -lXmu -lXt -lXi $X_EXTRA_LIBS"
+      bnv_qt_LIBS="-L$bnv_qt_lib_dir -l$bnv_qt_lib $X_PRE_LIBS $X_LIBS -lX11 -lXext -lXt -lXi $X_EXTRA_LIBS"
     else
       # Use cached value or do search, starting with suggestions from
       # the command line
@@ -299,7 +301,7 @@ EOF
             echo "configure: could not compile:" >&AC_FD_CC
             cat bnv_qt_main.$ac_ext >&AC_FD_CC
           else
-            bnv_try_4="$CXX $QT_LIBS $LIBS -o bnv_qt_main bnv_qt_main.o moc_bnv_qt_test.o >/dev/null 2>/dev/null"
+            bnv_try_4="$CXX -o bnv_qt_main bnv_qt_main.o moc_bnv_qt_test.o $QT_LIBS $LIBS >/dev/null 2>/dev/null"
             AC_TRY_EVAL(bnv_try_4)
             if test x"$ac_status" != x0; then
               echo "$bnv_err_4" >&AC_FD_CC
@@ -385,7 +387,7 @@ AC_DEFUN([BNV_PATH_QT_DIRECT],
       bnv_qt_lib="`ls $bnv_qt_lib_dir/libqt* | sed -n 1p |
                    sed s@$bnv_qt_lib_dir/lib@@ | [sed s@[.].*@@]`"
     fi
-    bnv_qt_LIBS="-L$bnv_qt_lib_dir -l$bnv_qt_lib $X_PRE_LIBS $X_LIBS -lX11 -lXext -lXmu -lXt -lXi $X_EXTRA_LIBS"
+    bnv_qt_LIBS="-L$bnv_qt_lib_dir -l$bnv_qt_lib $X_PRE_LIBS $X_LIBS -lX11 -lXext -lXt -lXi $X_EXTRA_LIBS"
   else
     # There is no valid definition for $QTDIR as Trolltech likes to see it
     bnv_qt_dir=
@@ -397,7 +399,7 @@ AC_DEFUN([BNV_PATH_QT_DIRECT],
         bnv_qt_lib="`ls $bnv_qt_lib_dir/libqt* | sed -n 1p |
                      sed s@$bnv_qt_lib_dir/lib@@ | [sed s@[.].*@@]`"
       fi
-      bnv_qt_LIBS="-L$bnv_qt_lib_dir -l$bnv_qt_lib $X_PRE_LIBS $X_LIBS -lX11 -lXext -lXmu -lXt -lXi $X_EXTRA_LIBS"
+      bnv_qt_LIBS="-L$bnv_qt_lib_dir -l$bnv_qt_lib $X_PRE_LIBS $X_LIBS -lX11 -lXext -lXt -lXi $X_EXTRA_LIBS"
     else
       # Normally, when there is no traditional Trolltech installation,
       # the library is installed in a place where the linker finds it
@@ -415,7 +417,7 @@ AC_DEFUN([BNV_PATH_QT_DIRECT],
       # See if we find the library without any special options.
       # Don't add top $LIBS permanently yet
       bnv_save_LIBS="$LIBS"
-      LIBS="-l$bnv_qt_lib $X_PRE_LIBS $X_LIBS -lX11 -lXext -lXmu -lXt -lXi $X_EXTRA_LIBS"
+      LIBS="-l$bnv_qt_lib $X_PRE_LIBS $X_LIBS -lX11 -lXext -lXt -lXi $X_EXTRA_LIBS"
       bnv_qt_LIBS="$LIBS"
       bnv_save_CXXFLAGS="$CXXFLAGS"
       CXXFLAGS="-I$bnv_qt_include_dir"
@@ -429,7 +431,7 @@ AC_DEFUN([BNV_PATH_QT_DIRECT],
         # That did not work. Try the multi-threaded version
         echo "Non-critical error, please neglect the above." >&AC_FD_CC
         bnv_qt_lib=qt-mt
-        LIBS="-l$bnv_qt_lib $X_PRE_LIBS $X_LIBS -lX11 -lXext -lXmu -lXt -lXi $X_EXTRA_LIBS"
+        LIBS="-l$bnv_qt_lib $X_PRE_LIBS $X_LIBS -lX11 -lXext -lXt -lXi $X_EXTRA_LIBS"
         AC_TRY_LINK([#include <$qt_direct_test_header>],
           $qt_direct_test_main,
         [
@@ -440,7 +442,7 @@ AC_DEFUN([BNV_PATH_QT_DIRECT],
           # That did not work. Try the OpenGL version
           echo "Non-critical error, please neglect the above." >&AC_FD_CC
           bnv_qt_lib=qt-gl
-          LIBS="-l$bnv_qt_lib $X_PRE_LIBS $X_LIBS -lX11 -lXext -lXmu -lXt -lXi $X_EXTRA_LIBS"
+          LIBS="-l$bnv_qt_lib $X_PRE_LIBS $X_LIBS -lX11 -lXext -lXt -lXi $X_EXTRA_LIBS"
           AC_TRY_LINK([#include <$qt_direct_test_header>],
             $qt_direct_test_main,
           [
@@ -476,7 +478,7 @@ AC_DEFUN([BNV_PATH_QT_DIRECT],
               fi
             done
             # Try with that one
-            LIBS="-l$bnv_qt_lib $X_PRE_LIBS $X_LIBS -lX11 -lXext -lXmu -lXt -lXi $X_EXTRA_LIBS"
+            LIBS="-l$bnv_qt_lib $X_PRE_LIBS $X_LIBS -lX11 -lXext -lXt -lXi $X_EXTRA_LIBS"
             AC_TRY_LINK([#include <$qt_direct_test_header>],
               $qt_direct_test_main,
             [
@@ -485,6 +487,7 @@ AC_DEFUN([BNV_PATH_QT_DIRECT],
               bnv_qt_lib_dir=
             ], [
               # Leave bnv_qt_lib_dir defined
+	      bnv_qt_lib_dir=bnv_qt_lib_dir
             ])
           ])
         ])
